@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-16T01:11:13Z",
+  "timestamp" : "2022-07-16T16:14:21Z",
   "count_outdated" : 394,
   "uniques_outdated" : 214,
-  "count" : 424,
+  "count" : 423,
   "uniques" : 229,
   "clones" : [
     {
       "timestamp": "2022-07-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
