@@ -1,3 +1,10 @@
+2022-07-16T16:14:21Z:
+* notice: last 14d: unq all: 2 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 214 394 / 229 424
+* notice: next accum: outdated-unq outdated-all / unq all: 214 394 / 229 423
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-02]
+
 2022-07-16T01:11:13Z:
 * notice: last 14d: unq all: 2 30
 * notice: prev accum: outdated-unq outdated-all / unq all: 212 390 / 228 421
